--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "electron": "^19.0.4",
+    "electron-packager": "^15.5.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
